--- a/snapshot/packmenu/resources/assets/adpother/lang/ru_ru.json
+++ b/snapshot/packmenu/resources/assets/adpother/lang/ru_ru.json
@@ -3,28 +3,28 @@
 	"block.adpother.sulfur": "Сера",
 	"block.adpother.dust": "Пыль",
 	
-	"block.adpother.iron_filter_frame": "Железная Рамка Фильтра",
-	"block.adpother.gold_filter_frame": "Золотая Рамка Фильтра",
-	"block.adpother.diamond_filter_frame": "Алмазная Рамка Фильтра",
-	"block.adpother.polluted_water": "Загрязнённая Вода",
+	"block.adpother.iron_filter_frame": "Железная рамка фильтра",
+	"block.adpother.gold_filter_frame": "Золотая рамка фильтра",
+	"block.adpother.diamond_filter_frame": "Алмазная рамка фильтра",
+	"block.adpother.polluted_water": "Загрязнённая вода",
 	
-	"container.adpother.filter_frame": "Рамка Фильтра",
+	"container.adpother.filter_frame": "Рамка фильтра",
 	
 	"effect.adpother.respirator": "Респиратор",
 	
-	"fluid.adpother.polluted_water_still": "Загрязнённая Вода",
-	"fluid.adpother.polluted_water_flowing": "Загрязнённая Вода",
+	"fluid.adpother.polluted_water_still": "Загрязнённая вода",
+	"fluid.adpother.polluted_water_flowing": "Загрязнённая вода",
 	
 	"item.adpother.aerometer": "Аэро-метр",
-	"item.adpother.iron_vacuum_bag": "Железный Вакуумный Мешок",
-	"item.adpother.gold_vacuum_bag": "Золотой Вакуумный Мешок",
-	"item.adpother.diamond_vacuum_bag": "Алмазный Вакуумный Мешок",
-	"item.adpother.iron_vacuum_tube": "Железный Вакуумный Насос",
-	"item.adpother.gold_vacuum_tube": "Золотой Вакуумный Насос",
-	"item.adpother.diamond_vacuum_tube": "Алмазный Вакуумный Насос",
-	"item.adpother.iron_respirator": "Железный Респиратор",
-	"item.adpother.gold_respirator": "Золотой Респиратор",
-	"item.adpother.diamond_respirator": "Алмазный Респиратор",
+	"item.adpother.iron_vacuum_bag": "Железный вакуумный мешок",
+	"item.adpother.gold_vacuum_bag": "Золотой вакуумный мешок",
+	"item.adpother.diamond_vacuum_bag": "Алмазный вакуумный мешок",
+	"item.adpother.iron_vacuum_tube": "Железный вакуумный насос",
+	"item.adpother.gold_vacuum_tube": "Золотой вакуумный насос",
+	"item.adpother.diamond_vacuum_tube": "Алмазный вакуумный насос",
+	"item.adpother.iron_respirator": "Железный респиратор",
+	"item.adpother.gold_respirator": "Золотой респиратор",
+	"item.adpother.diamond_respirator": "Алмазный респиратор",
 	"item.adpother.polluted_water_bucket": "Ведро загрязнённой воды",
 	
 	"tooltip.adpother.storage_item.contents": "Воздушные фильтры:",
