--- a/snapshot/packmenu/resources/assets/adpother/lang/ru_ru.json
+++ b/snapshot/packmenu/resources/assets/adpother/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-	"block.adpother.carbon": "Карбон",
+	"block.adpother.carbon": "Углерод",
 	"block.adpother.sulfur": "Сера",
 	"block.adpother.dust": "Пыль",
 	
@@ -15,7 +15,7 @@
 	"fluid.adpother.polluted_water_still": "Загрязнённая вода",
 	"fluid.adpother.polluted_water_flowing": "Загрязнённая вода",
 	
-	"item.adpother.aerometer": "Аэро-метр",
+	"item.adpother.aerometer": "Измеритель загрязнения воздуха",
 	"item.adpother.iron_vacuum_bag": "Железный вакуумный мешок",
 	"item.adpother.gold_vacuum_bag": "Золотой вакуумный мешок",
 	"item.adpother.diamond_vacuum_bag": "Алмазный вакуумный мешок",
