--- a/snapshot/packmenu/resources/assets/movingelevators/lang/ru_ru.json
+++ b/snapshot/packmenu/resources/assets/movingelevators/lang/ru_ru.json
@@ -1,29 +1,28 @@
 {
-  "block.movingelevators.button_block": "Remote Elevator Panel",
+  "block.movingelevators.button_block": "Беспроводной контроллер лифта",
   "block.movingelevators.display_block": "Дисплей лифта",
   "block.movingelevators.elevator_block": "Контроллер лифта",
-  "itemGroup.movingelevators": "Moving Elevators",
-  "movingelevators.elevator_controller.tooltip": "Place elevator controllers above each other to create floors for an elevator",
-  "movingelevators.elevator_display.tooltip": "Shows an elevators' floors when placed on top of an elevator controller or remote elevator panel",
-  "movingelevators.elevator_screen.cabin_depth": "Cabin depth",
-  "movingelevators.elevator_screen.cabin_depth.decrease_offset": "Move backward",
-  "movingelevators.elevator_screen.cabin_depth.decrease_size": "Decrease depth",
-  "movingelevators.elevator_screen.cabin_depth.increase_offset": "Move forward",
-  "movingelevators.elevator_screen.cabin_depth.increase_size": "Increase depth",
-  "movingelevators.elevator_screen.cabin_height": "Cabin height",
-  "movingelevators.elevator_screen.cabin_height.decrease_offset": "Move down",
-  "movingelevators.elevator_screen.cabin_height.decrease_size": "Decrease height",
-  "movingelevators.elevator_screen.cabin_height.increase_offset": "Move up",
-  "movingelevators.elevator_screen.cabin_height.increase_size": "Increase height",
-  "movingelevators.elevator_screen.cabin_size": "Cabin size",
-  "movingelevators.elevator_screen.cabin_width": "Cabin width",
-  "movingelevators.elevator_screen.cabin_width.decrease_offset": "Move left",
-  "movingelevators.elevator_screen.cabin_width.decrease_size": "Decrease width",
-  "movingelevators.elevator_screen.cabin_width.increase_offset": "Move right",
-  "movingelevators.elevator_screen.cabin_width.increase_size": "Increase width",
+  "movingelevators.elevator_controller.tooltip": "Установите контроллеры лифта друг над другом чтобы создать этажи",
+  "movingelevators.elevator_display.tooltip": "Показывает этажи лифта если поставлен на контроллер лифта",
+  "movingelevators.elevator_screen.cabin_depth": "Длина кабины",
+  "movingelevators.elevator_screen.cabin_depth.decrease_offset": "Сдвинуть назад",
+  "movingelevators.elevator_screen.cabin_depth.decrease_size": "Уменьшить длину",
+  "movingelevators.elevator_screen.cabin_depth.increase_offset": "Сдвинуть вперед",
+  "movingelevators.elevator_screen.cabin_depth.increase_size": "Уменьшить длину",
+  "movingelevators.elevator_screen.cabin_height": "Высота кабины",
+  "movingelevators.elevator_screen.cabin_height.decrease_offset": "Сдвинуть вниз",
+  "movingelevators.elevator_screen.cabin_height.decrease_size": "Уменьшить высоту",
+  "movingelevators.elevator_screen.cabin_height.increase_offset": "Сдвинуть вверх",
+  "movingelevators.elevator_screen.cabin_height.increase_size": "Увеличить высоту",
+  "movingelevators.elevator_screen.cabin_size": "Размер кабины",
+  "movingelevators.elevator_screen.cabin_width": "Ширины кабины",
+  "movingelevators.elevator_screen.cabin_width.decrease_offset": "Сдвинуть влево",
+  "movingelevators.elevator_screen.cabin_width.decrease_size": "Уменьшить ширину",
+  "movingelevators.elevator_screen.cabin_width.increase_offset": "Сдвинуть вправо",
+  "movingelevators.elevator_screen.cabin_width.increase_size": "Увеличить ширину",
   "movingelevators.elevator_screen.current_floor": "Этаж",
-  "movingelevators.elevator_screen.current_speed": "%s blocks/tick",
-  "movingelevators.elevator_screen.display_buttons": "Show buttons: %s",
+  "movingelevators.elevator_screen.current_speed": "%s блоков/тик",
+  "movingelevators.elevator_screen.display_buttons": "Показывать кнопки: %s",
   "movingelevators.elevator_screen.display_buttons.off": "Выключено",
   "movingelevators.elevator_screen.display_buttons.on": "Включено",
   "movingelevators.elevator_screen.elevator": "Лифт",
@@ -32,10 +31,10 @@
   "movingelevators.elevator_screen.show_buttons": "Показать кнопки",
   "movingelevators.floor_name": "Этаж %d",
   "movingelevators.remote_controller.bind": "Привязан к контроллеру лифта!",
-  "movingelevators.remote_controller.clear": "Cleared stored elevator location!",
-  "movingelevators.remote_controller.controller_location": "Bound to elevator controller at (%1$d, %2$d, %3$d)",
+  "movingelevators.remote_controller.clear": "Котроллер лифта отвязан!",
+  "movingelevators.remote_controller.controller_location": "Беспроводной контроллер лифта был ривязан к (%1$d, %2$d, %3$d)",
   "movingelevators.remote_controller.not_bound": "Блок должен быть связан с контроллером лифта!",
-  "movingelevators.remote_controller.tooltip": "Can be bound to an elevator controller by right-clicking on it",
-  "movingelevators.remote_controller.tooltip.bound": "Bound to elevator controller at (%1$d, %2$d, %3$d) in %4$s",
+  "movingelevators.remote_controller.tooltip": "Может быть связан с котроллером лифта при нажатии ПКМ",
+  "movingelevators.remote_controller.tooltip.bound": "Привязан к (%1$d, %2$d, %3$d) in %4$s",
   "movingelevators.remote_controller.wrong_dimension": "Блок должен быть в том-же измерении что и контроллер!"
 }
