--- a/snapshot/packmenu/resources/assets/jaopca/lang/ru_ru.json
+++ b/snapshot/packmenu/resources/assets/jaopca/lang/ru_ru.json
@@ -9,10 +9,10 @@
     "fluid.jaopca.molten": "Расплавленный %s",
     "item.jaopca.molten": "Ведро расплавленного %s",
 
-    "item.jaopca.mekanism_dirty_dusts": "Dirty %s Dust",
+    "item.jaopca.mekanism_dirty_dusts": "Грязная %s пыль",
     "item.jaopca.mekanism_clumps": "%s сгусток",
     "item.jaopca.mekanism_shards": "%s осколок",
-    "item.jaopca.mekanism_crystals": "%s кристал",
+    "item.jaopca.mekanism_crystals": "%s кристалл",
     "slurry.jaopca.mekanism_dirty": "Dirty %s Slurry",
     "slurry.jaopca.mekanism_clean": "Clean %s Slurry",
 
@@ -29,7 +29,7 @@
     "item.jaopca.bloodmagic_fragments": "%s Ore Fragment",
 
     "item.jaopca.electrodynamics_impuredusts": "Impure %s Dust",
-    "item.jaopca.electrodynamics_crystals": "%s Crystal",
+    "item.jaopca.electrodynamics_crystals": "%s кристалл",
     "fluid.jaopca.electrodynamics_mineral_fluids": "%s Mineral Fluid",
     "item.jaopca.electrodynamics_mineral_fluids": "%s Mineral Fluid Bucket",
 
